<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_calculator">

    <fragment
        android:id="@+id/nav_calculator"
        android:name="app.com.yorubacalc.ui.calculator.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_sound"
        android:name="app.com.yorubacalc.ui.sound.SoundFragment"
        android:label="@string/ohun"
        tools:layout="@layout/fragment_sound" />

    <fragment
        android:id="@+id/nav_visuals"
        android:name="app.com.yorubacalc.ui.images.ImagesFragment"
        android:label="@string/aworan"
        tools:layout="@layout/fragment_images" />

<!--    <fragment-->
<!--        android:id="@+id/nav_help"-->
<!--        android:name="app.com.yorubacalc.ui.gallery.HelpFragment"-->
<!--        android:label="@string/iranwo"-->
<!--        tools:layout="@layout/fragment_help" />-->

    <fragment
        android:id="@+id/exit"
        android:name="app.com.yorubacalc.ui.share.ExitFragment"
        android:label="@string/jade"
        tools:layout="@layout/fragment_exit" />

</navigation>